# klatooinian-huttese-audio

./: .env.example  .gitignore  LICENSE  Makefile  REFACTORING.md  pyproject.toml  readme.md
doc/: todo.md
samples/: lines.txt
src/: __init__.py  cli.py  cli_simple.py  fx.py  interactive.py  rewrite.py  suppress_warnings.py  synth.py  synth_simple.py
src/audio/: README.md  __init__.py  effects.py  readme.md  translation.py
src/audio/engines/: __init__.py  coqui.py  kokoro.py  simple.py
src/cli/: __init__.py  audio_cli.py  interactive.py  simple_cli.py
src/common/: __init__.py  suppress_warnings.py
src/config/: __init__.py  settings.py
src/input/: __init__.py  ui.py
src/roll20/: __init__.py  client.py  config.py  login_flow.md  message.py  readme.md  screenshot_capture.md  service.md  service.py  test_client.py  test_screenshot.py  test_service.py  verbose.py
tests/integration/: test_fx.py
tests/integration/test_audio/: test_effects.py
tests/unit/: test_imports.py  test_rewrite.py  test_ui.py
tests/unit/test_audio/: test_translation.py
tests/unit/test_roll20/: README.md  test_client.py
